data/contextbench_phase1/stripped/stripped_adp_rendered/000123_65c4e48f-4f8d-447b-a5b4-f2509f68a2f7.txt
STRIPPED ADP TRAJECTORY
This is the capped/rendered ADP representation for injection. Full stripped_adp.audit.jsonl is audit-only.

SOURCE
------
- trajectory_id: 65c4e48f-4f8d-447b-a5b4-f2509f68a2f7
- repo: django/django
- instance_id: django__django-14915
- base_commit: 903aaa35e5ceaa33bfc9b19b7f6da65ce5a91dd4

[ADP OBSERVATION current=0 original=0 source=user]
excerpt:
PRIOR ISSUE METADATA
repo: django/django
instance_id: django__django-14915
base_commit: 903aaa35e5ceaa33bfc9b19b7f6da65ce5a91dd4
problem_statement:
ModelChoiceIteratorValue is not hashable.
Description

Recently I migrated from Django 3.0 to Django 3.1. In my code, I add custom data-* attributes to the select widget options. After the upgrade some of those options broke. Error is {TypeError}unhashable type: 'ModelChoiceIteratorValue'.
Example (this one breaks):
    def create_option(self, name, value, label, selected, index, subindex=None, attrs=None):
        context = super().create_option(name, value, label, selected, index, subindex, attrs)
        if not value:
            return context
        if value in self.show_fields: # This is a dict {1: ['first_name', 'last_name']}
            context['attrs']['data-fields'] = json.dumps(self.show_fields[value])
However, working with arrays is not an issue:
    def create_option(self, name, value, label, selected, index, subindex=None, attrs=None):
        context = super().create_option(name, value, label, selected, index, subindex, attrs)
        if not value:
            return context
        if value in allowed_values: # This is an array [1, 2]
            ...
sha256: c327785c2f6abe01f756863d91db6e84707b91b652fc734458f9387a5695e3e0
truncated: false

[ADP ACTION current=1 original=13: api_action Grep]
path: testbed
payload:
{
  "output_mode": "content",
  "path": "testbed",
  "pattern": "class ModelChoiceIteratorValue"
}
sha256: 497d60205764baae159d300488067e6c2b2fd9b8d520b82e1f564e1f5a6143ef
truncated: false

[ADP OBSERVATION current=2 original=14 source=environment]
name: Grep:toolu_012w9vEGGfn4q3te94zM8fc5
excerpt:
testbed/django/forms/models.py:1161:class ModelChoiceIteratorValue:
sha256: b9d0be395660909aab639d61c5bb82ba5cac1274a1a8c38510424de33feec975
truncated: false

[ADP ACTION current=3 original=15: api_action Read]
path: django/forms/models.py
payload:
{
  "file_path": "./swebench_9_15/testbed/django/forms/models.py",
  "limit": 50,
  "offset": 1150
}
sha256: fed5f04248d92d08fcb42d21f7d4cd9c16b9dc7ba6dfce9958fbdb98742eb6f4
truncated: false

[ADP OBSERVATION current=4 original=16 source=environment]
name: Read:toolu_0197ewUep7QMLWpzjCgMatJ7
excerpt:
  1150→            orig = getattr(self.parent_instance, self.to_field)
  1151→        else:
  1152→            orig = self.parent_instance.pk
  1153→        if str(value) != str(orig):
  1154→            raise ValidationError(self.error_messages['invalid_choice'], code='invalid_choice')
  1155→        return self.parent_instance
  1156→
  1157→    def has_changed(self, initial, data):
  1158→        return False
  1159→
  1160→
  1161→class ModelChoiceIteratorValue:
  1162→    def __init__(self, value, instance):
  1163→        self.value = value
  1164→        self.instance = instance
  1165→
  1166→    def __str__(self):
  1167→        return str(self.value)
  1168→
  1169→    def __eq__(self, other):
  1170→        if isinstance(other, ModelChoiceIteratorValue):
  1171→            other = other.value
  1172→        return self.value == other
  1173→
  1174→
  1175→class ModelChoiceIterator:
  1176→    def __init__(self, field):
  1177→        self.field = field
  1178→        self.queryset = field.queryset
  1179→
  1180→    def __iter__(self):
  1181→        if self.field.empty_label is not None:
  1182→            yield ("", self.field.empty_label)
  1183→        queryset = self.queryset
  1184→        # Can't use iterator() when queryset uses prefetch_related()
  1185→        if not queryset._prefetch_related_lookups:
  1186→            queryset = queryset.iterator()
  1187→        for obj in queryset:
  1188→            yield self.choice(obj)
  1189→
  1190→    def __len__(self):
  1191→        # count() adds a query but uses less memory since the QuerySet results
  1192→        # won't be cached. In most cases, the choices will only be iterated on,
  1193→        # and __len__() won't be called.
  1194→        return self.queryset.count() + (1 if self.field.empty_label is not None else 0)
  1195→
  1196→    def __bool__(self):
  1197→        return self.field.empty_label is not None or self.queryset.exists()
  1198→
  1199→    def choice(self, obj):

sha256: 3d9bf7f2eda49470e57463619c0baa37e951a69fe91a5828c1372e00ed223299
truncated: false

[ADP ACTION current=5 original=19: api_action Edit]
path: django/forms/models.py
payload:
{
  "file_path": "./swebench_9_15/testbed/django/forms/models.py",
  "new_text_sha256": "9576fdb4f47d62a7cccb8c15cbfe38e9e455728f28d9c055f197725b0de653f0",
  "old_text_sha256": "d7d9d58ecbb91b48d8eaf76eb16958872f5033f70a41ca34bb70865210779a8e"
}
sha256: 14738457dbb0af99da159530fa0e7379a2201b6c0cc3dc9869c126e4758f9c47
truncated: false

[ADP ACTION current=6 original=23: api_action Write]
path: test_hashable_fix.py
payload:
{
  "content_sha256": "752dc35c0b2fe33f790818ef441e560a84c67e54c79f92128df0a26e4d6d315a",
  "file_path": "./swebench_9_15/testbed/test_hashable_fix.py"
}
sha256: c6ca924d11357ff8769d70fbecbc438999f1259cc2d6b39982401bdf823b73f4
truncated: false

[ADP ACTION current=7 original=25: code_action bash]
payload:
cd testbed && python test_hashable_fix.py
sha256: 964c3193d4ba31bdd7360c0e48c1f017c282d4bcf95c58712e260207ce08a892
truncated: false

[ADP OBSERVATION current=8 original=26 source=environment]
name: Bash:toolu_01GNL4Dy52ft9eHs3RFTMvQd:error
excerpt:
Exit code 1
  File "test_hashable_fix.py", line 27
    print(f"  hash(value1) = {h1}")
                                 ^
SyntaxError: invalid syntax
sha256: 7ff349144d0c9172a2b9daf484f4e80f78150a6c15daba59d7dd258beea2fed1
truncated: false

[ADP ACTION current=9 original=27: code_action bash]
payload:
cd testbed && python --version
sha256: a92916d45b229ff79cc347b94d5b68f5a698e30a5c9b01f756231bdcd738895b
truncated: false

[ADP OBSERVATION current=10 original=28 source=environment]
name: Bash:toolu_01Y1uj1BeMg5FaHmynDgSp8V
excerpt:
Python 2.7.3
sha256: c6d9bd2d561b074688a302920b8e73838fd3f7b4043465431748a1e3b85691fe
truncated: false

[ADP ACTION current=11 original=29: code_action bash]
payload:
cd testbed && python3 --version
sha256: 840d176e8feb630687b70b27ba6120c43be5553375016ab88350d8d4233555c3
truncated: false

[ADP ACTION current=12 original=31: code_action bash]
payload:
python3 --version
sha256: 3b13d1fc455b846006e7be989f6bdd99606007fc586c7f625e6549a9ee8b94f8
truncated: false

[ADP OBSERVATION current=13 original=32 source=environment]
name: Bash:toolu_0179XFLVaPE58VYtFHkagokH
excerpt:
Python 3.8.8
sha256: acd1c6d0a01b9418a3ac077015cf0ed3f607b78b23b8e2400bef63b5ad40366d
truncated: false

[ADP ACTION current=14 original=33: code_action bash]
payload:
python3 ./swebench_9_15/testbed/test_hashable_fix.py
sha256: e7a840e054c076ed6714dfe5284868781e6566edc0fe87fef5ff93fd76ffcee1
truncated: false

[ADP OBSERVATION current=15 original=34 source=environment]
name: Bash:toolu_01LVFwRVDasyKDgNcuMiYGcx
excerpt:
Testing hash()...
  hash(value1) = 1
  hash(value2) = 2
  hash(value3) = 1
  ✓ hash() works

Testing equal values have equal hashes...
  ✓ Equal values have equal hashes

Testing dictionary key usage...
  Created dict: {<django.forms.models.ModelChoiceIteratorValue object at 0x7fd6f8112e20>: 'first', <django.forms.models.ModelChoiceIteratorValue object at 0x7fd6f8112b80>: 'second'}
  value1 in test_dict: True
  value2 in test_dict: True
  value3 in test_dict: True
  ✓ Dictionary key usage works

Testing original use case...
  value1 found in show_fields: ['first_name', 'last_name']
  value2 found in show_fields: ['email']
  ✓ Original use case works

Testing set usage...
  Set length: 2 (should be 2, not 3)
  ✓ Set usage works

✅ All tests passed!
Error processing line 1 of /opt/anaconda3/lib/python3.8/site-packages/matplotlib-nspkg.pth:

  Traceback (most recent call last):
    File "/opt/anaconda3/lib/python3.8/site.py", line 169, in addpackage
      exec(line)
    File "<string>", line 1, in <module>
    File "<frozen importlib._bootstrap>", line 553, in module_from_spec
  AttributeError: 'NoneType' object has no attribute 'loader'

Remainder of file ignored
sha256: 47f9f1de623af04e1c7abf851ee515c89a5db95b740e3dc3ab9f2a53f78b49c5
truncated: false

[ADP ACTION current=16 original=41: code_action bash]
payload:
rm ./swebench_9_15/testbed/test_hashable_fix.py
sha256: 15d3d22c14f8e5167b3f394669e35cda006c0a04182bba6cbf6bf25b265d1720
truncated: false
